--- a/View/CreateAccount.html
+++ b/View/CreateAccount.html
@@ -38,7 +38,7 @@
         
           <div class="container">
             <div class="row">
-              <div class="col-md-6" id="msg-display">
+              <div class="col-md-6" id="msg-display" style="color: #a349a4;">
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
       msg = `
          <div class="alert alert-danger alert-dismissible">
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Error!</strong> Wrong Email or Password
+            <strong>Error!</strong> Email Already Asscoiated with account
           </div>
       `;
        document.getElementById("msg-display").innerHTML = msg;
