--- a/View/NPER.html
+++ b/View/NPER.html
@@ -16,7 +16,7 @@
         <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
         <div class="col-12 col-xs-0 cold-md-8 col-lg-4">
             <h1 id = "header1" name = "header1" style = "font-size:60px; font-weight: 750; margin-top: 40px; margin-bottom: 40px; border-style:solid; border-width:10px; border-color:#a349a4;">
-                <u>Yeild of Maturity:</u>
+                <u>Payment Periods:</u>
             </h1>
         </div>
         <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
@@ -25,51 +25,49 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "priceLabel" for="priceInput" style="font-size: 40px; float: left;">Current Bond Price:</label>
-                <input type="number" step="0.01" class="form-control" id="priceInput" name="priceInput"></input>
+                <label id = "pvLabel" for="pvInput" style="font-size: 40px; float: left;">Present Value:</label>
+                <input type="number" step="0.01" class="form-control" id="pvInput" name="pvInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "faceLabel" for="faceInput" style="font-size: 40px; float: left;">Bond Face Value/Par Value:</label>
-                <input type="number" step="0.01" class="form-control" id="faceInput" name="faceInput"></input>
+                <label id = "fvLabel" for="fvInput" style="font-size: 40px; float: left;">Future Value:</label>
+                <input type="number" step="0.01" class="form-control" id="fvInput" name="fvInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "maturityLabel" for="maturityInput" style="font-size: 40px; float: left;">Years to Maturity :</label>
-                <input type="number" step="0.01" class="form-control" id="maturityInput" name="maturityInput"></input>
+                <label id = "pmtLabel" for="pmtInput" style="font-size: 39px; float: left;">Payments:</label>
+                <input type="number" step="0.01" class="form-control" id="pmtInput" name="pmtInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "coupLabel" for="coupInput" style="font-size: 40px; float: left;">Annual Coupon Rate (%)</label>
-                <input type="number" step="0.01" class="form-control" id="coupInput" name="coupInput"></input>
+                <label id = "rateLabel" for="rateInput" style="font-size: 39px; float: left;">Rate:</label>
+                <input type="number" step="0.01" class="form-control" id="rateInput" name="rateInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "pmtMadeLabel" for="pmtMade" style="font-size: 40px; float: left;">Options:</label>
-                <select id="select1">
-                    <option value=0>Annually</option>
-                    <option value=1>Semiannually</option>
-                    <option value=2>Quarterly</option>
-                    <option value=3>Monthly</option>
-                </select>
-                
-                <button onclick="getOption()"> Confirm </button>
-                
+                <label id = "pmtMadeLabel" for="pmtMade" style="font-size: 40px; float: left;">Payments Start or end of Period:</label>
+                <div class="dropdownForm" id="pmtMade" name="pmtMade">
+                    <button class="dropbtnForm" id="whenPayment" onclick="displayMenu()" type="button">Start▽</button>
+                    <div class="dropdown-contentForm" id="menu" type="button" style = "border-style: solid; border-top-style: none; border-width: 5px; border-color: #a349a4;">
+                        <a href="javascript:void(0)" id="optionwhen" type="button" onclick="switchOption()">End</a>
+                    </div>
+                </div>
             </div>
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
         </div>
+        
         <div class="row">
             <div class="col-12 col-xs-1 col-s-1 col-lg-4"></div>
             <div class="col-12 col-xs-1 col-s-1 col-md-4 col-lg-4" style = "font-size:25px; font-weight: 750;">
@@ -80,6 +78,7 @@
             <div class="col-12 col-xs-1 col-s-1 col-lg-4"></div>
         </div>
     </form>
+   
     <div class="row">
         <div class="col-12 col-xs-1 col-s-1 col-lg-4"></div>
         <div class="col-12 col-xs-1 col-s-1 col-md-4 col-lg-4" style = "font-size:25px; font-weight: 750;">
@@ -96,11 +95,21 @@
         let option = 0;
         let display = 0;
         
-        function getOption() {
-            selectElement = document.querySelector('#select1');
-            option = selectElement.value;
+        function switchOption(){
+            if(option === 0){
+                option = 1;
+                document.getElementById('whenPayment').innerHTML = "Start▽";
+                document.getElementById('optionwhen').innerHTML = "End";
+                document.getElementById('menu').style.display = "none";
+                display = 0;
+            }else{
+                option = 0;
+                document.getElementById('whenPayment').innerHTML = "End▽";
+                document.getElementById('optionwhen').innerHTML = "Start";
+                document.getElementById('menu').style.display = "none";
+                display = 0;
+            }
         }
-
         function displayMenu(){
             if(display === 0){
                 document.getElementById('menu').style.display = "block";
@@ -112,12 +121,11 @@
 
         }
         function calculate(){
-            let priceInput = document.getElementById("priceInput").value;
-            let faceInput = document.getElementById("faceInput").value;
-            let maturityInput = document.getElementById("maturityInput").value;
-            let coupInput = document.getElementById("coupInput").value;
-
-            document.getElementById('answer').innerHTML = exports.YTM(priceInput, faceInput, maturityInput, coupInput, option);
+            let pvInput = document.getElementById("pvInput").value;
+            let fvLabel = document.getElementById("fvLabel").value;
+            let pmtInput = document.getElementById("pmtInput").value;
+            let rateInput = document.getElementById("rateInput").value;
+            document.getElementById('answer').innerHTML = exports.NPER(pvInput,fvLabel,pmtInput,rateInput,option);
             document.getElementById('answer').style.color = "#ffffff";
         }
     </script>
