--- a/View/login.html
+++ b/View/login.html
@@ -44,7 +44,7 @@
         
           <div class="container">
             <div class="row">
-              <div class="col-md-6" id="msg-display">
+              <div class="col-md-6" id="msg-display" >
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
       msg = `
          <div class="alert alert-danger alert-dismissible">
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Error!</strong> Email Already Asscoiated with account
+            <strong>Error!</strong> Email Wrong / Password Wrong
           </div>
       `;
        document.getElementById("msg-display").innerHTML = msg;
