--- a/View/login.html
+++ b/View/login.html
@@ -39,38 +39,39 @@
             <button style="background-color: #a349a4;color: rgb(255, 255, 255);height: 50px; width: 200px; margin-top: 10px;">
               <a href="CreateAccount.html"> create Account </a>
             </button>
+
+            <div class="col-md-15" id="msg-display" >
+            </div>
         
           </form>
         
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6" id="msg-display" >
-              </div>
-            </div>
-          </div>
+
         </div>
         <div class="col-12 col-xs-0 cold-md-2 col-lg-0"></div>
     </div>
     
 
-    <script type = "text/javascript" src = NavBar.js>
+    <script type = "text/javascript" src = NavBar.js></script>
 
-      
-    const params = new URLSearchParams(window.location.search);    
-    let error = params.get('error');
-    let msg = null;
-    if(error === '1'){
-      msg = `
-         <div class="alert alert-danger alert-dismissible">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Error!</strong> Email Wrong / Password Wrong
-          </div>
-      `;
-       document.getElementById("msg-display").innerHTML = msg;
-    } 
-    //window.alert('Login or Password Incorrect');
+    <script type = "text/javascript" >
+
+      const params = new URLSearchParams(window.location.search);    
+      let error = params.get('error');
+      let msg = null;
+      if(error === '1'){
+        msg = `
+           <div class="alert alert-danger alert-dismissible">
+              <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+              <strong>Error!</strong> Email/Password incorrect
+            </div>
+        `;
+         document.getElementById("msg-display").innerHTML = msg;
+      } 
+      //window.alert('Login or Password Incorrect');
+    
+    
   
-    </script>
+  </script>
     </body>
 </html>
 
